# serix

./: .editorconfig  .gitignore  .markdownlint.json  ADD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATE.md  Makefile  PHASE3_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  boot.s  diff  grub.cfg  multiboot_header.s  rustfmt.toml  user.ld
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: build-and-release.yml  release.yml
apic/: Cargo.toml  README.md
apic/src/: ioapic.rs  lib.rs  timer.rs
capability/: Cargo.toml
capability/src/: lib.rs  store.rs  types.rs
docs/: ADD.md  ARCHITECTURE.md  BOOT_PROCESS.md  GRAPHICS_API.md  HAL_API.md  INTERRUPT_HANDLING.md  KERNEL_API.md  KERNEL_BOOTSTRAP_PLAN.md  MEMORY_LAYOUT.md  README.md  ROADMAP.md
docs/images/: README.md
docs/recordings/: README.md
drivers/: Cargo.toml  README.md
drivers/src/: block.rs  console.rs  lib.rs  pci.rs  virtio.rs  virtqueue.rs
ext4d/: Cargo.toml
ext4d/src/: main.rs
fs/: Cargo.toml  README.md
fs/src/: block_cache.rs  lib.rs
fs/src/ext2/: bgdt.rs  bitmap_alloc.rs  dir.rs  inode.rs  inode_impl.rs  mod.rs  superblock.rs
fs/src/ext4/: bgdt.rs  bitmap_alloc.rs  dir.rs  extent.rs  inode.rs  ipc.rs  kernel_stub.rs  mod.rs  superblock.rs
fs/src/fat32/: mod.rs
graphics/: Cargo.toml  README.md
graphics/src/: lib.rs
hal/: Cargo.toml  README.md
hal/src/: cpu.rs  io.rs  lib.rs  serial.rs  topology.rs
idt/: Cargo.toml  README.md
idt/src/: lib.rs
ipc/: Cargo.toml  README.md
ipc/src/: lib.rs
iso_root/: limine.conf
iso_root/boot/: kernel
kernel/: Cargo.toml  README.md  linker.ld
kernel/.cargo/: config.toml
kernel/src/: apic.rs  fd.rs  gdt.rs  graphics.rs  hal.rs  heap.rs  idt.rs  kshell.rs  lib.rs  main.rs  memory.rs  pipe.rs  process.rs  stdio.rs  syscall.rs  util.rs
keyboard/: Cargo.toml  README.md
keyboard/src/: lib.rs
loader/: Cargo.toml
loader/src/: elf.rs  lib.rs
memory/: Cargo.toml  README.md
memory/src/: heap.rs  kstack.rs  lib.rs  slub.rs
scripts/: qemu-run.sh
src/: main.rs
task/: Cargo.toml  README.md
task/src/: async_task.rs  context_switch.rs  executor.rs  lib.rs  scheduler.rs  waker.rs  yield_now.rs
ulib/: Cargo.toml
ulib/examples/: init.rs
ulib/src/: fmt.rs  io.rs  (+2 more)
util/: Cargo.toml  README.md
vfs/: Cargo.toml  README.md
(+8 files in other folders)
