[workspace]
resolver = "3"
members = ["kernel",
    "memory",
    "hal",
    "apic",
    "idt",
    "graphics",
    "util",
    "task",
    "keyboard",
    "capability",
    "drivers",
    "vfs",
    "ipc"
    , "loader", "ulib", "fs"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
