[package]
name = "idt"
version = "0.1.0"
edition = "2024"

[dependencies]
x86_64 = "0.15.2"
hal = { path = "../hal" }
util = { path = "../util" }
keyboard = { path = "../keyboard" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
