[[bin]]
name = "kernel"
path = "src/lib.rs"


[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
multiboot2 = "0.24.0"
linked_list_allocator = "0.10.5"
x86_64 = "0.15.2"
apic = { path = "../apic" }
graphics = { path = "../graphics" }
hal = { path = "../hal" }
idt = { path = "../idt" }
memory = { path = "../memory" }
util = { path = "../util" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
