[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.5.0"
x86_64 = "0.15.2"
apic = { path = "../apic" }
graphics = { path = "../graphics", features = ["global-console"] }
hal = { path = "../hal" }
idt = { path = "../idt" }
memory = { path = "../memory" }
util = { path = "../util" }
task = { path = "../task" }
capability = { path = "../capability" }
spin = "0.10.0"
